# pils

./: README.md  TODO.org  meson.build  meson_options.txt
src/: Birra.cpp  Birra.h  Game.cpp  Game.h  GirlWindow.cpp  GirlWindow.h  GirlsManager.cpp  GirlsManager.h  MBeer.cpp  MBeer.h  Menu.cpp  Menu.h  Oggetto.cpp  Oggetto.h  PhysicObject.cpp  PhysicObject.h  Player.cpp  Player.h  SubWindow.cpp  SubWindow.h  global.cpp  global.h  main.cpp
